# substrate-merkle-proof-verification

./: Cargo.toml
node/: Cargo.toml
pallets/gov/: Cargo.toml
pallets/gov/src/: lib.rs  mock.rs  tests.rs  verifier.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
