[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0-monthly-2021-08'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-template'
[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '3.0.0'

[dependencies.node-template-runtime]
path = '../runtime'
version = '3.0.0-monthly-2021-08'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

[dependencies.frame-benchmarking]
version = '3.0.0'

[dependencies.frame-benchmarking-cli]
version = '3.0.0'

[dependencies.pallet-transaction-payment-rpc]
version = '3.0.0'

[dependencies.sc-basic-authorship]
version = '0.9.0'

[dependencies.sc-cli]
features = ['wasmtime']
version = '0.9.0'

[dependencies.sc-client-api]
version = '3.0.0'

[dependencies.sc-consensus]
version = '0.9.0'

[dependencies.sc-consensus-aura]
version = '0.9.0'

[dependencies.sc-executor]
features = ['wasmtime']
version = '0.9.0'

[dependencies.sc-finality-grandpa]
version = '0.9.0'

[dependencies.sc-keystore]
version = '3.0.0'

[dependencies.sc-rpc]
version = '3.0.0'

[dependencies.sc-rpc-api]
version = '0.9.0'

[dependencies.sc-service]
features = ['wasmtime']
version = '0.9.0'

[dependencies.sc-telemetry]
version = '3.0.0'

[dependencies.sc-transaction-pool]
version = '3.0.0'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.sp-api]
version = '3.0.0'

[dependencies.sp-block-builder]
version = '3.0.0'

[dependencies.sp-blockchain]
version = '3.0.0'

[dependencies.sp-consensus]
version = '0.9.0'

[dependencies.sp-consensus-aura]
version = '0.9.0'

[dependencies.sp-core]
version = '3.0.0'

[dependencies.sp-finality-grandpa]
version = '3.0.0'

[dependencies.sp-inherents]
version = '3.0.0'

[dependencies.sp-runtime]
version = '3.0.0'

[dependencies.sp-timestamp]
version = '3.0.0'

[dependencies.substrate-frame-rpc-system]
version = '3.0.0'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
