[package]
authors = ['kevincheng96']
description = 'Substrate pallet for verifying Ethereum merkle proofs.'
edition = '2018'
homepage = ''
license = 'Unlicense'
name = 'pallet-gov'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '1.0.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies.serde]
version = '1.0.126'

[dependencies.sp-core]
default-features = false
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
optional = true
version = '3.0.0'

[dependencies.frame-support]
default-features = false
version = '3.0.0'

[dependencies.frame-system]
default-features = false
version = '3.0.0'

[dependencies.trie-db]
default-features = false
version = '0.22.6'

[dependencies.sp-std]
default-features = false
version = '3.0.0'

[dependencies.sp-trie]
default-features = false
version = '3.0.0'

[dependencies.hash-db]
default-features = false
version = '0.12.4'

[dependencies.hex]
default-features = false
version = '0.4.3'

[dependencies.tiny-keccak]
default-features = false
features = ['keccak']
version = '2.0.0'

[dependencies.hash256-std-hasher]
default-features = false
version = '0.15.2'

[dependencies.log]
default-features = false
version = '0.4.8'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'sp-trie/std',
    'trie-db/std',
    'hash-db/std',
    'hex/std',
]