[package]
authors = ['kevincheng96']
description = 'Substrate pallet for verifying Ethereum merkle proofs.'
edition = '2018'
homepage = ''
license = 'Unlicense'
name = 'pallet-gov'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '1.0.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-trie = { default-features = false, version = '3.0.0' }
trie-db = { default-features = false, version = '0.22.6' }
tiny-keccak = { default-features = false, features = ['keccak'], version = '2.0.0' }
hash256-std-hasher = { default-features = false, version = '0.15.2' }
hash-db = { default-features = false, version = '0.12.4' }
hex = { default-features = false, version = '0.4.3' }

[dev-dependencies]
serde = { version = "1.0.119" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-trie/std',
    'trie-db/std',
    'hash-db/std',
    'hex/std',
]
